# kannadb_remaster

./: .coveragerc  .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  .project  .pydevproject  CLAUDE.md  Dockerfile  Procfile  README.md  README.rst  commit.sh  docker-compose.yml  example.env  manage.py  nixpacks.toml  pyproject.toml  railway.json  requirements.txt  run.sh  update.txt
.envs/.local/: .postgres
.github/workflows/: main.yml  nino.yml
config/: urls.py  wsgi.py
config/settings/: base.py  local.py  production.py  test.py
docs/: Makefile  conf.py  index.rst  make.bat
linus/: conftest.py  workspace.code-workspace
linus/contrib/sites/migrations/: 0003_set_site_domain_and_name.py  0004_alter_site_options.py
linus/feh/: admin.py  apps.py  filters.py  forms.py  lucksack_calc.py  models.py  sliders.py  urls.py  utils.py  views.py
linus/feh/management/commands/: curl_heroes.py  import_heroes.py
linus/feh/migrations/: 0001_initial.py  0002_alter_skill_description_alter_skill_slot.py  0002_auto_20200322_1738.py  0003_auto_20200322_1739.py  0004_auto_20200322_1807.py  0005_auto_20200323_0345.py  0006_hero_boonbanes.py  0007_auto_20200330_1642.py  0008_auto_20200330_1644.py  0009_auto_20200408_0800.py  0010_auto_20200408_0816.py  0011_auto_20200408_0829.py  0012_auto_20200408_1125.py  0013_skill_hero_stripped_names.py  0014_auto_20200416_1111.py  0015_auto_20200419_0901.py  0016_hero_has_resplendent.py  0017_hero_season.py  0018_hero_icon_image.py  0019_auto_20200912_1832.py  0020_remove_hero_icon_image.py  0021_auto_20210328_1551.py  0022_auto_20210401_1413.py  0023_auto_20220928_1944.py  0024_auto_20221001_0755.py
linus/feh/poro/: poroAccents.py  poroGen.py  poroclasses.py  poroclasses_old.py  porocurler.py  porocurler_v2.py  poroimagecurler.py  poroparser_v2.py  poropicklechecker.py
linus/feh/tests/: test_gamepedia.py
linus/static/css/: dark_mode.css  dark_mode_button.css  heroes_2.css  modern-art.css
linus/static/js/: content_common.js  dark_reader.js  heroes_2.js  project.js  skills.js
linus/templates/: 500.html  base.html
linus/templates/account/: email.html  email_confirm.html  login.html  password_reset_done.html  password_reset_from_key.html  password_set.html  verified_email_required.html
linus/templates/feh/: calculator.html  heroes.html  kannadb_base.html  lucksack.html  refresh.html  sidebar.html  skills.html  welcome.html
linus/templates/pages/: home.html
linus/templates/users/: user_detail.html  user_form.html  user_list.html
linus/users/: admin.py  apps.py  urls.py
linus/users/migrations/: 0002_alter_user_first_name.py
linus/users/tests/: factories.py  test_forms.py  test_views.py
nginx/: nginx.conf  nginx.crt  nginx.key
requirements/: base.txt
